# Chisel-GPT

./: .gitmodules  Cargo.toml  foundry.toml  readme.md  remappings.txt
src/: main.rs  node.rs
src/completion/: bot_role.rs  command_response.rs  complete.rs  context.rs  foundry_interface.rs  mod.rs
src/helpers/: command_helper.rs  dispatch.rs  mod.rs  split_commands.rs
